# tora

./: .gitattributes  .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md  SECURITY.md
.agents/skills/release-automation/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  security_hardening.yml
.github/release-notes/: v1.1.0.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.2.3.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml  security.yml
BuildSupport/: Tora.entitlements
Commands/: Dev.command  Prod.command  Test.command  Watch.command  dev.sh  prod.sh  test.sh  watch.sh
Docs/: ARCHITECTURE.md  RELEASES.md  SECURITY_TEST_PLAN.md  THREAT_MODEL.md  index.html  style.css
Scripts/: bootstrap-release-deps.sh  capture-demo-screenshot.sh  create-release.sh  install-git-hooks.sh  notarize-app.sh  package-app.sh  release-check.sh  verify-release-binaries.sh
Sources/ToraApp/: AppIcon.icns  ToraApp.swift
Sources/ToraCore/: DemoTorrentService.swift  TorrentModels.swift  TorrentRecord.swift  TorrentService.swift  TorrentSettings.swift
Sources/ToraDebug/: main.swift
Sources/ToraLibtorrentBridge/: LibtorrentSession.cpp  LibtorrentSession.hpp  ToraLibtorrentBridge.mm
Sources/ToraPersistence/: AppDirectories.swift  MetadataStore.swift  ResumeDataStore.swift  SessionDataStore.swift  SettingsStore.swift
Sources/ToraUI/: ToraRootView.swift
Tests/Fixtures/: empty-file.torrent.hex
(+17 files in other folders)
